# vina_mvp

./: .env.example  .gitignore  BACKEND_API_SPEC.md  BENCHMARK_REPORT.md  CROSS_PROVIDER_FALLBACK_SUMMARY.md  FALLBACK_GENERATOR_IMPLEMENTATION.md  GENERATOR_PROMPT_V2.4_IMPROVEMENTS.md  IMPLEMENTATION_CHANGELOG_FEB_2026.md  IMPLEMENTATION_REPORT_AUDIT_TRAIL.md  IMPLEMENTATION_REPORT_ONBOARDING_QUIZ.md  LESSON_GENERATION_SUMMARY.md  LICENSE  New_API_requests_from_front_end.md  PHASE_3_VIDEO_PIPELINE_PLAN.md  PRD-Practice-Feature.md  PRD_And_Implementation_Plan.md  Post-Lesson-Quiz-PRD.md  Procfile  RAILWAY_DATABASE_SETUP.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  Vina-FrontEnd-PRD.md  WORKFLOW_UPDATE_SUMMARY.md  bugfix_adaptation_logic.md  pyproject.toml  railway.json  requirements.txt  test_cors.html
docs/: MEDIA_FILES_STRATEGY.md  VIDEO_GENERATION_WORKFLOW.md  video-gen-serve-logic.md
reports/: api_test_results.txt
scripts/: benchmark_models.py  calculate_video_cost.py  check_deps.py  check_video_cache.py  clear_lesson_cache.py  db_migration_utils.py  debug_clear_cache.py  debug_list_lessons.py  demo_complete_pipeline.py  generate_batch_content.py  generate_lesson_quizzes.py  generate_onboarding_quizzes.py  generate_practice_questions.py  init_db.py  init_render_disk.sh  inspect_cache.py  inspect_db.py  inspect_profile.py  migrate_add_video_url.py  migrate_db_hack.py  migrate_manifest_to_db.py  migrate_railway_db.py  render_demo_pipeline.py  reproduce_bcrypt_issue.py  reset_user_progress.py  sync_project_content.py  test_backend_api.py  test_course_loader.py  test_cross_provider_fallback.py  test_db_conn.py  test_end_to_end_pipeline.py  test_fallback_generator.py  test_fallback_prompt.py  test_imagen_client.py  test_learner_state.py  test_lesson_generation.py  test_nano_gemini.py  (+14 more)
(+93 files in other folders)
